# GridGuide

./: .gitignore  LICENSE  README.md  main.py  main_image.py  main_video.py  utils.py
app/grid_guid/: README.md  pubspec.yaml
app/grid_guid/lib/: main.dart
app/grid_guide/: pubspec.yaml
app/grid_guide/lib/: main.dart
app/native_opencv/: .metadata  pubspec.yaml
app/native_opencv/android/: CMakeLists.txt  build.gradle
app/native_opencv/android/src/main/: AndroidManifest.xml
app/native_opencv/android/src/main/kotlin/com/codewiz/native_opencv/: NativeOpencvPlugin.kt
app/native_opencv/example/: pubspec.yaml
app/native_opencv/ios/: native_opencv.podspec
app/native_opencv/lib/: native_opencv.dart
c++ scripts/: main.cpp  solver.cpp
dataset/: albumenations_lib.py  augmentor_lib.py  extract_cell_from_board.py  labeling_script.ipynb  outputs.txt  read_files.txt  split_data.py  tmp.py
dataset/cells/2/: image1043 (1)_70_20.2jpg  image1062_76_15.2.g  image1082_81_70.2jpg  image1086 (1)_84_49.2jpg  image2005_50_45.2jpg
key/: grid_guide_key.jks  key.passwd
model/: fingerprint.pb
model building/: main.ipynb  main_v1.ipynb  main_v2.ipynb
model building/collect-data/: server.py
model building/models/: model.tflite
model building/models/model/: fingerprint.pb  keras_metadata.pb  (+1 more)
model/variables/: variables.data-00000-of-00001
play store/: text.md
python scripts/: main_image.py  main_video.py  utils.py
scripts/: CMakeLists.txt
scripts/cpp_scripts/: main.cpp  solver.cpp  solver.h  utils.h
scripts/python scripts/: main_image.py  solver.py  utils.py
(+75 files in other folders)
